--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
 @import '~antd/dist/antd.css';
 
-.App {
-	text-align: center;
-}
-
 .App-header {
 	background-color: #282c34;
 	min-height: 100vh;
@@ -17,4 +13,8 @@
 
 .App-link {
 	color: #61dafb;
+}
+
+.project-studylist {
+	margin: 1.5em;
 }
